# LatOS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESULTS_LOG.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  THESIS_OUTLINE.md  glossary.md  references.md
docs/figures/: architecture.md
docs/stages/: _template.md  stage1_ingestion.md  stage2_labeling.md  stage3_analysis.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_drop_files_sha256_unique.py  0003_add_analysis_results.py
scripts/: check.bat  check.ps1  check.py  check.sh  dhivya_dump.py  ingest.py
src/latos/: __init__.py
src/latos/analysis/: __init__.py  base_analyzer.py  registry.py  service.py
src/latos/analysis/uv_drs/: tauc.py
src/latos/analysis/xrd/: peak_fit.py
src/latos/core/: __init__.py  enums.py  exceptions.py  models.py
src/latos/ingestion/: __init__.py  array_store.py  base_parser.py  crawler.py  hashing.py  orchestrator.py  parsed_data.py  registry.py
src/latos/ingestion/labeling/: __init__.py  cluster.py  decisions.py  hints.py  normalize.py  pipeline.py
src/latos/ingestion/parsers/: __init__.py  eds_bruker_spx.py  hall_xls.py  microscopy_tif.py  thermoelectric_xlsx.py  uvdrs_xlsx.py  xps_casaxps_csv.py  xrd_panalytical_xrdml.py  xrd_rigaku_asc.py  xrd_rigaku_txt.py
src/latos/persistence/: __init__.py  db.py  mappers.py  repository.py  schema.py
src/latos/ui/: __init__.py  app.py  main_window.py  themes.py
src/latos/ui/dialogs/: __init__.py  ingestion_progress.py
src/latos/ui/pages/: analysis.py  cluster_review.py  overview.py  project_picker.py  sample_review.py  welcome.py
src/latos/ui/services/: __init__.py  ingestion_worker.py  recent_projects.py
tests/fixtures/parsers/eds/: bruker_1.spx
tests/fixtures/parsers/hall/: hall_cs.xls
tests/fixtures/parsers/thermoelectric/: zt_calc.xlsx
tests/fixtures/parsers/uvdrs/: uvdrs_cs.xlsx
tests/fixtures/parsers/xps/: casaxps_c1s.csv
tests/fixtures/parsers/xrd/: panalytical_cscbi1.xrdml  rigaku_bs3a.txt  rigaku_cs_pure.asc
tests/integration/: test_dhivya_ingestion.py
tests/unit/: test_smoke.py
tests/unit/analysis/: test_base_analyzer.py  test_registry.py  test_service.py
tests/unit/analysis/uv_drs/: test_tauc.py
tests/unit/analysis/xrd/: test_peak_fit.py
tests/unit/core/: test_enums.py  test_exceptions.py  test_models.py
tests/unit/ingestion/: test_array_store.py  test_base_parser.py  test_crawler.py  test_hashing.py  test_orchestrator.py  test_parsed_data.py  test_registry.py
tests/unit/ingestion/labeling/: test_cluster.py  test_decisions.py  test_hints.py  test_normalize.py  test_pipeline.py
tests/unit/ingestion/parsers/: _helpers.py  test_eds_bruker_spx.py  test_hall_xls.py  test_microscopy_tif.py  test_thermoelectric_xlsx.py  test_uvdrs_xlsx.py  test_xps_casaxps_csv.py  test_xrd_panalytical_xrdml.py  test_xrd_rigaku_asc.py  test_xrd_rigaku_txt.py
tests/unit/ingestion/parsers/snapshots/: bruker_eds_1.json  casaxps_c1s.json  hall_cs.json  microscopy_tem_cs.json  panalytical_cscbi1.json  rigaku_bs3a.json  rigaku_cs_pure.json  thermoelectric_zt_calc.json  uvdrs_cs.json
tests/unit/persistence/: conftest.py  test_db.py  test_mappers.py  test_migrations.py  test_repository.py
tests/unit/ui/: conftest.py  test_app.py  test_main_window.py  test_themes.py
tests/unit/ui/dialogs/: test_ingestion_progress.py
tests/unit/ui/pages/: test_analysis.py  test_cluster_review.py  test_overview.py  test_project_picker.py  test_sample_review.py  test_welcome.py
tests/unit/ui/services/: test_ingestion_worker.py  test_recent_projects.py
