[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latos"
version = "0.1.0"
description = "Latos — Multi-modal materials characterization desktop platform (Lattice + OS)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Srinikhil", email = "venkatasaivarma28@gmail.com" },
]
keywords = [
    "materials science",
    "characterization",
    "xrd",
    "xps",
    "thermoelectric",
    "spectroscopy",
    "bayesian optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15.0",

    # Data fitting
    "lmfit>=1.3",
    "pybaselines>=1.1",

    # File parsing
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pillow>=10.0",
    "tifffile>=2024.1",

    # Persistence
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Materials science
    "pymatgen>=2024.3",
    "mp-api>=0.42",

    # Sample identification
    "rapidfuzz>=3.6",
    "networkx>=3.2",

    # Desktop UI
    "PySide6>=6.6",
    "PySide6-Fluent-Widgets>=1.5",
    "pyqtgraph>=0.13",
    "matplotlib>=3.8",

    # Configuration
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",

    # Logging & utilities
    "loguru>=0.7",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
    # Stage 5: VLM/LLM (Ollama is external, just need HTTP client)
    "httpx>=0.27",

    # Stage 7: Bayesian Optimization
    "torch>=2.2",
    "gpytorch>=1.11",
    "botorch>=0.10",
]

dev = [
    # Test runners
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=4.1",
    "pytest-snapshot>=0.9",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.98",

    # Code quality
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.6",

    # Type stubs
    "pandas-stubs",
    "types-tqdm",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

build = [
    "pyinstaller>=6.5",
]

all = ["latos[ml,dev,docs,build]"]

[project.urls]
Homepage = "https://github.com/srinikhil25/LatOS"
Repository = "https://github.com/srinikhil25/LatOS"
Issues = "https://github.com/srinikhil25/LatOS/issues"

[project.gui-scripts]
latos-app = "latos.ui.app:main"

# ----------------------------------------------------------------------------
# Hatch packaging
# ----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/latos"]

[tool.hatch.build.targets.wheel.force-include]
"src/latos/py.typed" = "latos/py.typed"

# ----------------------------------------------------------------------------
# Ruff (linter + formatter)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
    "D",      # pydocstyle
    "TID",    # flake8-tidy-imports
    "PL",     # pylint
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method (dunder name communicates intent)
    "D107",   # Missing docstring in __init__ (covered by class docstring)
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "PLR0913",# Too many arguments in function definition
    "RUF002", # Ambiguous unicode char in docstring (we use Greek/math symbols: σ, α, η, …)
    "RUF003", # Ambiguous unicode char in comment (same rationale)
    "RUF022", # __all__ unsorted (we group by category for readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "PLC0415", "N818"]  # No docstrings + magic + local imports + test exception names
"scripts/**" = ["D"]
"migrations/versions/**" = ["D", "E501", "W291", "I001", "Q000"]  # auto-generated

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# MyPy (type checker)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
# src-layout: tell mypy where the package root is.
mypy_path = "src"
explicit_package_bases = true
# When a module name resolves to two paths (editable install + source),
# prefer the source tree.
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "pyqtgraph.*",
    "qfluentwidgets.*",
    "lmfit.*",
    "pymatgen.*",
    "mp_api.*",
    "scipy.*",
    "matplotlib.*",
    "xlrd.*",
    "openpyxl.*",
    "pyarrow.*",
    "networkx.*",
    "rapidfuzz.*",
    "pybaselines.*",
]
ignore_missing_imports = true

# tifffile ships with `py.typed`, so mypy follows its source — but its
# source uses Python 3.12 `type X = Y` statements that fail to parse
# under our 3.11 target. Skip imports of it entirely.
[[tool.mypy.overrides]]
module = ["tifffile", "tifffile.*"]
follow_imports = "skip"
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=latos",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring full pipeline",
    "ui: UI tests requiring Qt event loop",
    "gpu: tests requiring GPU/CUDA",
    "ollama: tests requiring local Ollama server",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pyqtgraph.*",
    "ignore::DeprecationWarning:qfluentwidgets.*",
]

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/latos"]
branch = true
omit = [
    "src/latos/ui/resources/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
# Coverage gate ratchets up per stage:
#   Stage 0: 0   (no app code yet — only smoke test)
#   Stage 1: 70  (foundation must be tested)
#   Stage 4: 80  (fit engine is critical)
#   Stage 8: 85  (production target)
fail_under = 0
show_missing = true
skip_covered = false
